# Orphanages

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: gunicorn.conf.py
backend/api/: serializers.py  tasks.py  tests.py  urls.py  views.py
backend/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/core/: adapters.py  admin.py  apps.py  context_processors.py  middleware.py  models.py  signals.py  sso_callbacks.py  tests.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_user_telegram_id_user_telegram_username.py  0003_rename_activitytype_to_projectcategory.py
backend/docs/: apps.py  urls.py  views.py
backend/expenses/: admin.py  models.py  tasks.py  tests.py  utils.py
backend/expenses/migrations/: 0001_initial.py  0002_alter_expense_channel.py  0003_add_budget_warning_to_expense.py  0004_rename_models_and_fields.py  0005_create_project_model.py
backend/reports/: urls.py  views.py
backend/templates/: 404.html  500.html  landing.html
backend/templates/admin/: login.html
backend/templates/google_sso/: login.html
backend/webhooks/: admin.py  models.py  sms.py  tasks.py  telegram_reply.py  tests.py  urls.py  views.py  views_telegram.py  whatsapp_reply.py
backend/webhooks/migrations/: 0001_initial.py  (+1 more)
docs/: DEPLOYMENT.md  ONBOARDING_GUIDE.md  SETUP_GUIDE.md  USER_MANUAL.md  WAR_ROOM_AUDIT.md  WHATSAPP_IMPLEMENTATION_PLAN.md  WHATSAPP_SETUP_GUIDE.md  nginx.conf.example
scripts/: deploy.sh
(+14 files in other folders)
